--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -3,6 +3,7 @@
   box-shadow: 2px -2px 2px 2px rgba(36,32,33,0.50);
   background-color: rgba(36,32,33,0.50);
   padding: 1%; 
+
   color:white;
 }
 
@@ -11,7 +12,7 @@ body {
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;
+  background-size: <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">;
 }
 
 h1 {
