--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -18,5 +18,11 @@ body {
 h1 {
   font-family:Helvetica Neue Light, Helvetica Neue, sans-serif;
   font-weight: 100;
-  font-size: 50 px;
+  font-size: 50px;
+}
+
+h2 {
+  font-family:Helvetica Neue Light, Helvetica Neue, sans-serif;
+  font-weight: 200;
+  font-size: 30px;
 }
