--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -3,7 +3,6 @@
   box-shadow: 2px -2px 2px 2px rgba(36,32,33,0.50);
   background-color: rgba(36,32,33,0.50);
   padding: 1%; 
-
   color:white;
 }
 
@@ -17,12 +16,19 @@ body {
 
 h1 {
   font-family:Helvetica Neue Light, Helvetica Neue, sans-serif;
-  font-weight: 100;
+  font-weight: 900;
   font-size: 50px;
 }
 
 h2 {
   font-family:Helvetica Neue Light, Helvetica Neue, sans-serif;
-  font-weight: 200;
+  font-weight: 900;
   font-size: 30px;
+}
+
+
+label {
+  font-family:Helvetica Neue Light, Helvetica Neue, sans-serif;
+  font-weight: 900;
+  font-size: 16px;
 }
