--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,10 +1,9 @@
- 
-<% @posts.each do |post| %>
+ <% @posts.each do |post| %>
   <div class="private-square span4">
 <h1>
     <%= post.title %>
     </h1>
-    
+    <%= image_tag post.image %>
     <h2> 
       <%= post.description %>
     </h2>
